[package]
name = "answer-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.10.2", features = ["cookies"] }
deadpool-postgres = "0.14.1"
env-file-reader = "0.3.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
serde = "1.0.219"
tera = "1.20.0"
time = "0.3.41"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
